<resources>
    <string name="app_name1">cap</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgotten Password?</string>
    <string name="login_signup">Signup</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_email">Email Address</string>
    <string name="signup_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="signup_username">Username</string>
    <string name="click_to_login">Click To Login</string>
    <string name="logoutButton">Logout</string>
    <string name="Lenxpplr">LENXPPLR</string>
    <string name="portfolio">Portfolio</string>
    <string name="drones">Drones</string>
    <string name="guide_for_camera">Guide For Camera</string>
    <string name="tutorial">Tutorial</string>
    <string name="photos_amp_video_styles"><![CDATA[Photos & Video Styles]]></string>
    <string name="todo">TODO</string>
    <string name="upload_tutorial">Upload Tutorial</string>
    <string name="view_tutorials">View Tutorial</string>
    <string name="upload_tutorial_title">Enter the title</string>
    <string name="tutorial_title">Enter the title</string>
    <string name="tutorial_description">Tutorial Description</string>
    <string name="take_notes">Take your notes</string>
    <string name="save_notes">Save notes</string>
    <string name="enter_tutorial_title">Enter Tutorial Title</string>
    <string name="enter_tutorial_description">Enter Description</string>
    <string name="upload_pdf">Upload pdf</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_audio">Upload audio</string>
    <string name="upload_video">Upload video</string>
    <string name="save_tutorial">Save</string>
    <string name="tutorials">Tutorials</string>
    <string name="enter_tutorial_link">Enter Links</string>
    <string name="email">Email</string>
    <string name="uploaded_images">Upload Images</string>
    <string name="Upload">Upload</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="upload_drone_images">Upload Drone Images</string>
    <string name="uploadimage">Upload Image</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="video_1_heading">Camera Basics</string>
    <string name="video_2_heading">Photography Techniques</string>
    <string name="video_3_heading">Camera Modes\n</string>
    <string name="feed">feed...</string>
    <string name="app_name">Capstone3</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>