<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="401dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/Lenxpplr"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="353dp"
        android:id="@+id/main_photos"
        android:layout_height="140dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_corner"
        app:cardCornerRadius="20dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pic"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:gravity="center"
            android:text="@string/photos_amp_video_styles"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:id="@+id/main_tutorial"
            android:layout_height="103dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_co"
            android:padding="20sp"
            android:text="@string/tutorial" />

        <Space
            android:layout_width="34dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="103dp"
            android:id="@+id/main_Guide"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_co"
            android:padding="20sp"
            android:text="@string/guide_for_camera" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center">

        <Button
            android:id="@+id/main_drones"
            android:layout_width="0dp"
            android:layout_height="103dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_co"
            android:padding="20sp"
            android:text="@string/drones" />

        <Space
            android:layout_width="34dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/main_portfolio"
            android:layout_width="0dp"
            android:layout_height="103dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_co"
            android:padding="20sp"
            android:text="@string/portfolio" />





</LinearLayout>
    <TextView
        android:id="@+id/feed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/feed"
        android:textColor="@color/white"
    android:textSize="18sp"
    android:textStyle="bold"
    android:gravity="center"
    android:clickable="true"
    android:onClick="openFeedActivity"
    android:textAllCaps="true"
    android:background="?android:attr/selectableItemBackground"
    android:drawablePadding="5dp"
    />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="hello World"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        android:padding="15dp"
        android:text="@string/logoutButton"
        android:textSize="20sp" />


</LinearLayout>
