<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/login_background">

    <ImageView
        android:src="@drawable/logo2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="Logo"/>


    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:hint="@string/signup_username"
        android:textColor="@color/white"
        android:inputType="text"
        android:padding="18dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:autofillHints="given-name" />


    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:autofillHints="newPassword"/>

    <EditText
        android:id="@+id/signup_cpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:autofillHints="newPassword"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/red"
        android:padding="19dp"
        android:text="@string/signup"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/login_bt"
        android:text="@string/click_to_login"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</LinearLayout>
